--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="/icon.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Spell Checker</title>
+		<meta
+			name="description"
+			content="Game designed to quickly learn how to write words correctly"
+		/>
+		<meta name="author" content="N.A. Troshnev (BoggerByte)" />
+		<link rel="icon" href="public/favicon.ico" />
+		<link rel="apple-touch-icon" href="public/apple-touch-icon.png" sizes="180x180" />
+		<link rel="mask-icon" href="public/mask-icon.svg" color="#FFFFFF" />
+		<meta name="theme-color" content="#ffffff" />
 	</head>
 	<body>
 		<div id="app"></div>
