fix: updated old title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Spell Checker</title>
+		<title>Guess The Letter</title>
 		<meta
 			name="description"
 			content="Game designed to quickly learn how to write words correctly"
